--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,13 +23,13 @@
         <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
         <meta name="twitter:creator" content="@dotkwame">
         <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image" content="https://ghelectionpromisestracker.github.io/assets/npp-img.jpg">
+        <meta name="twitter:image" content="https://ghelectionpromises.github.io/assets/npp-img.jpg">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="Gh Election Promises Tracker" />
         <meta property="og:type" content="article" />
-        <meta property="og:url" content="https://ghelectionpromisestracker.github.io/" />
-        <meta property="og:image" content="https://ghelectionpromisestracker.github.io/assets/trump-main.jpg" />
+        <meta property="og:url" content="https://ghelectionpromises.github.io/" />
+        <meta property="og:image" content="https://ghelectionpromises.github.io/assets/trump-main.jpg" />
         <meta property="og:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
         <meta property="og:site_name" content="Gh Election Promises Tracker" />
         <meta property="article:published_time" content="2016-11-10T00:51:00-05:00" />
