--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,34 +15,18 @@
         <meta itemprop="publisher" content="Gh Election Promises">
         <meta itemprop="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
         <meta itemprop="headline" content="Gh Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
-        <meta itemprop="image" content="assets/npp_img.jpg">
+        <meta itemprop="image" content="assets/npp_img.jpg"/>
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary_large_image"/>
         <meta name="twitter:site" content="@dotkwame">
-        <meta name="twitter:title" content="Gh Election Promises Tracker">
-        <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
-        <meta name="twitter:creator" content="@dotkwame">
-        <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image" content="https://ghelectionpromises.github.io/assets/npp-img.jpg">
+        <meta name="twitter:title" content="Gh Election Promises Tracker"/>
+        <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
+        <meta name="twitter:creator" content="@dotkwame"/>
 
-        <!-- Open Graph data -->
-        <meta property="og:title" content="Gh Election Promises Tracker" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="https://ghelectionpromises.github.io/" />
-        <meta property="og:image" content="https://ghelectionpromises.github.io/assets/trump-main.jpg" />
-        <meta property="og:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
-        <meta property="og:site_name" content="Gh Election Promises Tracker" />
-        <meta property="article:published_time" content="2016-11-10T00:51:00-05:00" />
-        <meta property="article:modified_time" content="2016-11-10T00:52:47-05:00" />
-        <meta property="article:section" content="Politics" />
-        <meta property="article:tag" content="Politics" />
-        <link rel="shortcut icon"                       href="/assets/favicon.ico" type="image/x-icon" />
-        <meta name="apple-mobile-web-app-title"         content="Gh Election Promises Tracker">
-        <meta name="application-name"                   content="Gh Election Promises Tracker">
-        <meta name="theme-color"                        content="#ffffff">
+        
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/ghelectionpromises/ghelectionpromises.github.io/master/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
