--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,7 +22,8 @@
         <meta name="twitter:title" content="Gh Election Promises Tracker"/>
         <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
         <meta name="twitter:creator" content="@dotkwame"/>
-
+       
+        {% include maincss.html %}
         
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
