--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -63,7 +63,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="https://trumptracker.github.io/">
+                    <a class="navbar-brand" href="https://ghelectionpromises.github.io/">
                         <b>Gh Election Promises Tracker</b>
                     </a>
 
@@ -99,7 +99,7 @@
 
         <div class="container-fluid">
             <div class="page-header">
-                <h5 class="text-right">Open Source at <a href="https://github.com/TrumpTracker/trumptracker.github.io"> <i class="fa fa-github fa-fw"></i></a></h5>
+                <h5 class="text-right">Open Source at <a href="https://github.com/ghelectionpromises/ghelectionpromises.github.io"> <i class="fa fa-github fa-fw"></i></a></h5>
             </div>
         </div>
         <footer class="footer">
@@ -109,7 +109,7 @@
                         <p class="text-muted">Inspired By <a href="https://trumptracker.github.io" target="_blank" rel="nofollow">TrumpTracker</a></p>
                     </div>
                     <div class="col-md-3">
-                        <p class="text-muted"><a href="https://raw.githubusercontent.com/TrumpTracker/ghelectionpromises.github.io/master/_data/data.yaml" target="_blank" rel="nofollow">Open Data</a></p>
+                        <p class="text-muted"><a href="https://raw.githubusercontent.com/ghelectionpromises/ghelectionpromises.github.io/master/_data/data.yaml" target="_blank" rel="nofollow">Open Data</a></p>
                     </div>
                 </div>
             </div>
