--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -104,6 +104,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
+                        <p class="text-muted">Follow us on Facebook<a href="https://www.facebook.com/ghelectionpromises/" target="_blank" rel="nofollow">Gh Election Promises Team</a></p>
+                    </div>
+                    <div class="col-md-3">
                         <p class="text-muted">Inspired By <a href="https://trumptracker.github.io" target="_blank" rel="nofollow">TrumpTracker</a></p>
                     </div>
                     <div class="col-md-3">
