--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,7 +22,7 @@
         <meta name="twitter:title" content="Gh Election Promises Tracker"/>
         <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
         <meta name="twitter:creator" content="@dotkwame"/>
-        
+
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/styles.css">
@@ -40,10 +40,10 @@
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
               ga('create', 'UA-88760149-2', 'auto');
               ga('send', 'pageview');
         </script>
+
         <script id="site-data" type="application/json">{{site.data.data | jsonify}}</script>
     </head>
     <body>
@@ -122,10 +122,14 @@
         <!-- Main JavaScript -->
         <script>
             $(document).ready(function () {
-
+                $.ajaxSetup({ cache: true });
+                $.getScript('//connect.facebook.net/en_US/sdk.js', function(){
+                    FB.init({
+                    appId: '223258854782118',
+                    version: 'v2.7' // or v2.1, v2.2, v2.3, ...
+                 });
                 // temp fix for table alignment
                 $('html > head').append($('<style>tbody > tr:nth-child(1) > td:nth-child(2) { width:100%; }</style>'));
-
                 // tabs
                 $('#myTabs a').click(function (e) {
                     e.preventDefault()
@@ -134,7 +138,6 @@
                 $(function () {
                     $('[data-toggle="tooltip"]').tooltip()
                 });
-
                 // search function
                 $("div.tab-pane input.search").keyup(function () {
                     var search = $(this).val().toLowerCase();
@@ -174,13 +177,10 @@
                                         //prevents duplicate heading titles
                                         display_heading = false;
                                     }
-
                                     // Default display class for all list items to be added
                                     var displayClass = "list-group-item";
-
                                     // Get the class of the table row for this td element
                                     var rowClass = $(this).parent().prop('className');
-
                                     // Not empty implies it is either danger (broken policy)
                                     // or success (achieved policy)
                                     if (rowClass !== "") {
@@ -198,14 +198,11 @@
                 $("form.navbar-form").submit(function(e){
                     e.preventDefault();
                 });
-
                 var oneDay = 24 * 60 * 60 * 1000; // hours*minutes*seconds*milliseconds
                 var todayDate = Date.now();
                 // Inaguration date
                 var inagurationDate = new Date(2017,00,007);
-
                 var daysUntilInaguration = Math.floor((inagurationDate.getTime() - todayDate)/(oneDay));
-
                 if (daysUntilInaguration === 0) {
                     $('#inauguration-time').text('Inauguration day is today.');
                 } else if (daysUntilInaguration > 0) {
@@ -213,13 +210,11 @@
                 } else {
                     $('.inauguration-time-container').hide();
                 }
-
                 var daysInOffice = Math.floor((todayDate - inagurationDate)/(oneDay));
                 if (daysInOffice < 0) {
                     daysInOffice = 0;
                 }
                 $('#days-in-office').text(daysInOffice);
-
                 // Parse site data.json
                 var siteData = JSON.parse($('#site-data').html());
                 var totalPoints = 0;
@@ -227,7 +222,6 @@
                 var pointsInProgress = 0;
                 var pointsAchieved = 0;
                 var pointsBroken = 0;
-
                 for(var i = 0; i < siteData.tabs.length; i++) {
                     for(var j = 0; j < siteData.tabs[i].sections.length; j++) {
                         for(var k = 0; k < siteData.tabs[i].sections[j].points.length; k++) {
@@ -245,14 +239,24 @@
                         }
                     }
                 }
-
                 $('.total-points').text(totalPoints || '0');
                 $('#points-achieved').text(pointsAchieved || '0');
                 $('#points-broken').text(pointsBroken || '0');
                 $('#points-not-started').text(pointsNotStarted || '0');
                 $('#points-in-progress').text(pointsInProgress || '0');
-
             });
+        </script>
+        <script>
+
+            var sharetofb = function(txt){
+                FB.ui({
+                method: 'share',
+                mobile_iframe: true,
+                href: 'http://tracker.ghelectionpromises.com/',
+                quote: txt,
+                hashtag: '#GhanaDecides',
+              }, function(response){});
+            }
         </script>
     </body>
 </html>
