--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -249,13 +249,14 @@
         <script>
 
             var sharetofb = function(txt){
-                FB.ui({
+                /*FB.ui({
                 method: 'share',
                 mobile_iframe: true,
                 href: 'http://tracker.ghelectionpromises.com/',
                 quote: txt,
                 hashtag: '#GhanaDecides',
-              }, function(response){});
+              }, function(response){});*/
+                alert(txt);
             }
         </script>
     </body>
