--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -271,7 +271,7 @@
                 method: 'share',
                 mobile_iframe: true,
                 href: 'http://tracker.ghelectionpromises.com/',
-                quote: txt,
+                quote: unescape(txt),
                 hashtag: '#GhanaDecides',
               }, function(response){});
             };
