--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -264,7 +264,7 @@
                 method: 'share',
                 mobile_iframe: true,
                 href: 'http://tracker.ghelectionpromises.com/',
-                quote: unescape(txt),
+                quote: _.unescape(txt),
                 hashtag: '#GhanaDecides',
               }, function(response){});
             };
