--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Article" lang="en">
-    <!-- Gh Election Promises Copyright 2016 MIT Open Source  -->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <meta name="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Gh Election Promises Tracker</title>
-        <!-- Schema.org markup for Google+ -->
-        <meta itemprop="name" content="Gh Election Promises Tracker">
-        <meta itemprop="author" content="Gh Election Promises">
-        <meta itemprop="datePublished" content="2016-12-08T00:00:00-00:00">
-        <meta itemprop="publisher" content="Gh Election Promises">
-        <meta itemprop="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
-        <meta itemprop="headline" content="Gh Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
-        <meta itemprop="image" content="assets/npp_img.jpg"/>
-        <!-- Twitter Card data -->
-        <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:site" content="@dotkwame">
-        <meta name="twitter:title" content="Gh Election Promises Tracker"/>
-        <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
-        <meta name="twitter:creator" content="@dotkwame"/>
+<!-- Gh Election Promises Copyright 2016 MIT Open Source  -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Gh Election Promises Tracker</title>
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Gh Election Promises Tracker">
+    <meta itemprop="author" content="Gh Election Promises">
+    <meta itemprop="datePublished" content="2016-12-08T00:00:00-00:00">
+    <meta itemprop="publisher" content="Gh Election Promises">
+    <meta itemprop="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
+    <meta itemprop="headline" content="Gh Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
+    <meta itemprop="image" content="assets/npp_img.jpg"/>
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@dotkwame">
+    <meta name="twitter:title" content="Gh Election Promises Tracker"/>
+    <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
+    <meta name="twitter:creator" content="@dotkwame"/>
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/styles.css">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -36,96 +36,96 @@
         <script src="https://use.fontawesome.com/1e8cbd500f.js"></script>
         <!-- Analytics JS -->
         <script>
-              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-              })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-              ga('create', 'UA-88760149-2', 'auto');
-              ga('send', 'pageview');
-        </script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-88760149-2', 'auto');
+      ga('send', 'pageview');
+      </script>
 
-        <script id="site-data" type="application/json">{{site.data.data | jsonify}}</script>
-    </head>
-    <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
+      <script id="site-data" type="application/json">{{site.data.data | jsonify}}</script>
+  </head>
+  <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
 
-            <div class="container">
+        <div class="container">
 
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
 
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-                    <a class="navbar-brand" href="https://ghelectionpromises.github.io/">
-                        <b>Gh Election Promises Tracker</b>
-                    </a>
+                <a class="navbar-brand" href="https://ghelectionpromises.github.io/">
+                    <b>Gh Election Promises Tracker</b>
+                </a>
 
-                </div>
+            </div>
 
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <form class="navbar-form" role="search">
-                        <div class="input-group">
-                            <input id="search-field" type="search" class="form-control" placeholder="Search" name="q">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <form class="navbar-form" role="search">
+                    <div class="input-group">
+                        <input id="search-field" type="search" class="form-control" placeholder="Search" name="q">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
                         </div>
-                    </form>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"></a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-
-            </div>
-            <!-- /.container-fluid -->
-
-        </nav>
-
-        {{content}}
-
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p class="text-muted">Follow us on Facebook <a href="https://www.facebook.com/ghelectionpromises/" target="_blank" rel="nofollow">Ghana Election Promises</a></p>
                     </div>
-                    <div class="col-md-6">
-                        <p class="text-muted">Inspired By <a href="https://trumptracker.github.io" target="_blank" rel="nofollow">TrumpTracker</a></p>
-                    </div>
+                </form>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+
+        </div>
+        <!-- /.container-fluid -->
+
+    </nav>
+
+    {{content}}
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-muted">Follow us on Facebook <a href="https://www.facebook.com/ghelectionpromises/" target="_blank" rel="nofollow">Ghana Election Promises</a></p>
+                </div>
+                <div class="col-md-6">
+                    <p class="text-muted">Inspired By <a href="https://trumptracker.github.io" target="_blank" rel="nofollow">TrumpTracker</a></p>
                 </div>
             </div>
-        </footer>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/lodash/4.17.3/lodash.min.js"></script>
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!-- Main JavaScript -->
-        <script>
-            $(document).ready(function() {
-                $.ajaxSetup({ cache: true });
-                $.getScript('//connect.facebook.net/en_US/sdk.js', function(){
-                FB.init({
+        </div>
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Main JavaScript -->
+    <script>
+    $(document).ready(function() {
+        $.ajaxSetup({ cache: true });
+        $.getScript('//connect.facebook.net/en_US/sdk.js', function(){
+            FB.init({
                 appId: '1177034922332004',
                 version: 'v2.7'
             });
-          });
         });
-        </script>
-        <script>
-            $(document).ready(function () {
+    });
+    </script>
+    <script>
+    $(document).ready(function () {
 
                 // temp fix for table alignment
                 $('html > head').append($('<style>tbody > tr:nth-child(1) > td:nth-child(2) { width:100%; }</style>'));
@@ -167,14 +167,14 @@
                                     if(display_section) {
                                         //appends section to search results
                                         $("#search-results").append('<li class="list-group-item active"><span>' +
-                                                $("ul.nav-tabs a[href='#" + panel_id + "']").html() + '</span></li>');
+                                            $("ul.nav-tabs a[href='#" + panel_id + "']").html() + '</span></li>');
                                         //prevents duplicate section titles
                                         display_section = false;
                                     }
                                     if(display_heading) {
                                         //appends heading to search results
                                         $("#search-results").append('<li class="list-group-item list-group-item-info"><span>' +
-                                                $(this).parent().parent().prev("thead").find("tr th").html() + '</span></li>');
+                                            $(this).parent().parent().prev("thead").find("tr th").html() + '</span></li>');
                                         //prevents duplicate heading titles
                                         display_heading = false;
                                     }
@@ -189,19 +189,19 @@
                                     // or success (achieved policy)
                                     if (rowClass !== "") {
                                       displayClass += " list-group-item-" + rowClass;
-                                    }
-                                    $("#search-results").append('<li class="'+ displayClass + '"><span>' + $(this).text() + '</span></li>')
-                                }
-                            });
-                        });
-                    } else {
+                                  }
+                                  $("#search-results").append('<li class="'+ displayClass + '"><span>' + $(this).text() + '</span></li>')
+                              }
+                          });
+});
+} else {
                         //fixes spacing caused by empty elements
                         $("div.row.search-results").hide();
                     }
                 });
-                $("form.navbar-form").submit(function(e){
-                    e.preventDefault();
-                });
+$("form.navbar-form").submit(function(e){
+    e.preventDefault();
+});
 
                 var oneDay = 24 * 60 * 60 * 1000; // hours*minutes*seconds*milliseconds
                 var todayDate = Date.now();
@@ -256,18 +256,18 @@
                 $('#points-not-started').text(pointsNotStarted || '0');
                 $('#points-in-progress').text(pointsInProgress || '0');
             });
-        </script>
-        <script>
+</script>
+<script>
 
-            var sharetofb = function(txt){
+var sharetofb = function(obj){
                 FB.ui({
                 method: 'share',
                 mobile_iframe: true,
                 href: 'http://tracker.ghelectionpromises.com/',
-                quote: _.unescape(txt),
+                quote: $(obj).closest('tr').find('a.electionpromise').text(),
                 hashtag: '#GhanaDecides',
-              }, function(response){});
-            };
-        </script>
-    </body>
+            }, function(response){});
+};
+</script>
+</body>
 </html>
