--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Article" lang="en">
-<!-- Gh Election Promises Copyright 2016 MIT Open Source  -->
+<!-- Ghana Election Promises Copyright 2016 MIT Open Source  -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +9,18 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Gh Election Promises Tracker</title>
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Gh Election Promises Tracker">
-    <meta itemprop="author" content="Gh Election Promises">
+    <meta itemprop="name" content="Ghana Election Promises Tracker">
+    <meta itemprop="author" content="Ghana Election Promises">
     <meta itemprop="datePublished" content="2016-12-08T00:00:00-00:00">
-    <meta itemprop="publisher" content="Gh Election Promises">
+    <meta itemprop="publisher" content="Ghana Election Promises">
     <meta itemprop="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
-    <meta itemprop="headline" content="Gh Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
+    <meta itemprop="headline" content="Ghana Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
     <meta itemprop="image" content="assets/npp_img.jpg"/>
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@dotkwame">
-    <meta name="twitter:title" content="Gh Election Promises Tracker"/>
-    <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker."/>
+    <meta name="twitter:title" content="Ghana Election Promises Tracker"/>
+    <meta name="twitter:description" content="Track NPP's 2016 Election Promises with Ghana Election Promises Tracker."/>
     <meta name="twitter:creator" content="@dotkwame"/>
 
     <!-- Latest compiled and minified CSS -->
@@ -62,7 +62,7 @@
                 </button>
 
                 <a class="navbar-brand" href="https://ghelectionpromises.github.io/">
-                    <b>Gh Election Promises Tracker</b>
+                    <b>Ghana Election Promises Tracker</b>
                 </a>
 
             </div>
