--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Gh Election Promises Tracker</title>
+    <title>Ghana Election Promises Tracker</title>
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Ghana Election Promises Tracker">
     <meta itemprop="author" content="Ghana Election Promises">
@@ -206,7 +206,7 @@ $("form.navbar-form").submit(function(e){
                 var oneDay = 24 * 60 * 60 * 1000; // hours*minutes*seconds*milliseconds
                 var todayDate = Date.now();
                 // Inaguration date
-                var inagurationDate = new Date(2017,00,07);
+                var inagurationDate = new Date(2017,00,08);
 
                 var daysUntilInaguration = Math.floor((inagurationDate.getTime() - todayDate)/(oneDay));
 
