--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,7 +46,7 @@
 
       <script id="site-data" type="application/json">{{site.data.data | jsonify}}</script>
   </head>
-  <body>
+  <body class="center-block">
     <nav class="navbar navbar-default navbar-fixed-top">
 
         <div class="container">
