--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a class="navbar-brand" href="https://ghelectionpromises.github.io/">
+                <a class="navbar-brand" href="http://ghelectionpromises.com/">
                     <b>Ghana Election Promises Tracker</b>
                 </a>
 
