--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -265,7 +265,7 @@ var sharetofb = function(obj){
                 mobile_iframe: true,
                 href: 'http://ghelectionpromises.com/',
                 quote: $(obj).closest('tr').find('a.electionpromise').text(),
-                hashtag: '#GhanaDecides',
+                hashtag: '#GhElectionPromises',
             }, function(response){});
 };
 </script>
