--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -263,7 +263,7 @@ var sharetofb = function(obj){
                 FB.ui({
                 method: 'share',
                 mobile_iframe: true,
-                href: 'http://ghelectionpromises.com/',
+                href: 'http://ghelectionpromises.com/tracker',
                 quote: $(obj).closest('tr').find('a.electionpromise').text(),
                 hashtag: '#GhElectionPromises',
             }, function(response){});
