--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker." />
+    <meta name="description" content="Track NPP's 2016 Election Promises with Ghana Election Promises Tracker." />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ghana Election Promises Tracker</title>
     <!-- Schema.org markup for Google+ -->
@@ -13,7 +13,7 @@
     <meta itemprop="author" content="Ghana Election Promises">
     <meta itemprop="datePublished" content="2016-12-08T00:00:00-00:00">
     <meta itemprop="publisher" content="Ghana Election Promises">
-    <meta itemprop="description" content="Track NPP's 2016 Election Promises with Gh Election Promises Tracker.">
+    <meta itemprop="description" content="Track NPP's 2016 Election Promises with Ghana Election Promises Tracker.">
     <meta itemprop="headline" content="Ghana Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
     <meta itemprop="image" content="assets/npp_img.jpg"/>
     <!-- Twitter Card data -->
@@ -81,11 +81,11 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!--div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"></a></li>
                 </ul>
-            </div>
+            </div-->
             <!-- /.navbar-collapse -->
 
         </div>
