--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,7 @@
     <meta itemprop="publisher" content="Ghana Election Promises">
     <meta itemprop="description" content="Track NPP's 2016 Election Promises with Ghana Election Promises Tracker.">
     <meta itemprop="headline" content="Ghana Election Promises Tracker - The Best Way to track NPP's 2016 Election promises." />
-    <!--meta itemprop="image" content="assets/npp_img.jpg"/>
+    <!--meta itemprop="image" content="assets/npp_img.jpg"/ -->
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@dotkwame">
